apps/seerr/service-default-seerr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seerr
    environment: prod
  name: seerr
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5055
  selector:
    app: seerr
  sessionAffinity: None
  type: ClusterIP
