apps/seerr/ingressroute-default-overseerr-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: seerr
    environment: prod
  name: overseerr-redirect
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`overseerr.brmartin.co.uk`)
      middlewares:
        - name: overseerr-redirect
          namespace: default
      services:
        - name: seerr
          port: 80
  tls:
    secretName: wildcard-brmartin-tls
