apps/seerr/ingressroute-default-seerr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: seerr
    environment: prod
  name: seerr
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`seerr.brmartin.co.uk`)
      services:
        - name: seerr
          port: 80
  tls:
    secretName: wildcard-brmartin-tls
